@@ -3,6 +3,7 @@ This this the changelog file for the Pothos GUI toolkit.
 Release 0.1.1 (pending)
 ==========================
 
+- QDoubleSpinBox parameter entry locale support fix
 - Fixed block ID update while editing
 
 Release 0.1.0 (2014-12-21)
